tests/bugs/invalid-field-access/source.soussou.swa
khuien:soussou;

sodé() konti {
  kouicé i: konti = 10;
  masen("%d", i.field);
  gbilen 0;
}
